[gd_scene load_steps=16 format=4 uid="uid://b8iipiro2mna5"]

[ext_resource type="Script" path="res://Scripts/MainScenes/Campaign/Tropikala/tropikala.gd" id="1_u8sg5"]
[ext_resource type="PackedScene" uid="uid://chr5bm0rlck45" path="res://Scenes/Prefabs/player.tscn" id="2_4vsui"]
[ext_resource type="Texture2D" uid="uid://c8wtd40xo6m5o" path="res://Assets/Photos/crown.png" id="2_xouj6"]
[ext_resource type="PackedScene" uid="uid://bnybsixdqwqbu" path="res://mainTileMap.tscn" id="3_thje5"]
[ext_resource type="FontFile" uid="uid://w1s71lqfqnt5" path="res://Assets/Fonts/Renogare-Regular.otf" id="4_1mnk3"]
[ext_resource type="PackedScene" uid="uid://n0648an3hc76" path="res://Scenes/Prefabs/Levels/Storyline/Tropikala/NPC/von01.tscn" id="5_gf1e8"]
[ext_resource type="PackedScene" uid="uid://bq6h4v2e805b" path="res://Scenes/Prefabs/Levels/Storyline/Tropikala/NPC/ric01.tscn" id="7_uwcl3"]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_1ypf1"]
points = PackedVector2Array(-100, -150, -50, -150, -50, 200, -200, 200, -200, 111.075, -100.965, 96.02)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sl1sa"]
size = Vector2(48, 322)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rcbqr"]
size = Vector2(48, 245.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ywr3k"]
size = Vector2(66, 352)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_08ot8"]
size = Vector2(354, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lfvdy"]
size = Vector2(66, 352)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6d4tb"]
size = Vector2(368, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oxkum"]
size = Vector2(364, 20)

[node name="Tropikala" type="Node2D"]
script = ExtResource("1_u8sg5")

[node name="mainCam" type="Camera2D" parent="."]
position = Vector2(-188, -323)
position_smoothing_enabled = true
position_smoothing_speed = 1.0
rotation_smoothing_enabled = true

[node name="Test" type="Panel" parent="mainCam"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1280.0
offset_top = -720.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="Sprite2D" type="Sprite2D" parent="mainCam"]
modulate = Color(3, 3, 3, 1)
z_index = 5
position = Vector2(0, -61)
scale = Vector2(0.124, 0.124)
texture = ExtResource("2_xouj6")

[node name="Players" type="Node" parent="."]

[node name="Player" parent="Players" instance=ExtResource("2_4vsui")]
position = Vector2(2208, 1049)
isCampaign = true

[node name="Player2" parent="Players" instance=ExtResource("2_4vsui")]
position = Vector2(2095, 1134)
isCampaign = true
playerIndex = 0

[node name="Player3" parent="Players" instance=ExtResource("2_4vsui")]
position = Vector2(2305, 1134)
isCampaign = true
playerIndex = 1

[node name="Player4" parent="Players" instance=ExtResource("2_4vsui")]
position = Vector2(2305, 1232)
isCampaign = true
playerIndex = 2

[node name="Player5" parent="Players" instance=ExtResource("2_4vsui")]
position = Vector2(2095, 1232)
isCampaign = true
playerIndex = 3

[node name="CPU" type="Node" parent="."]

[node name="Tutorial room 1" type="Node" parent="CPU"]

[node name="Computer" parent="CPU/Tutorial room 1" instance=ExtResource("2_4vsui")]
position = Vector2(3446, 1850)
rotation = -0.523598
isAI = true
canRespawn = false
isCampaign = true
playerIndex = 6
canShoot_Move = false

[node name="Computer2" parent="CPU/Tutorial room 1" instance=ExtResource("2_4vsui")]
position = Vector2(4651, 1197)
rotation = 2.61799
isAI = true
canRespawn = false
isCampaign = true
playerIndex = 6
canShoot_Move = false

[node name="Computer3" parent="CPU/Tutorial room 1" instance=ExtResource("2_4vsui")]
position = Vector2(4696, 1551)
rotation = -1.04721
isAI = true
canRespawn = false
isCampaign = true
playerIndex = 6
canShoot_Move = false

[node name="Computer4" parent="CPU/Tutorial room 1" instance=ExtResource("2_4vsui")]
position = Vector2(4106, 581)
rotation = -1.83261
isAI = true
canRespawn = false
isCampaign = true
playerIndex = 6
canShoot_Move = false

[node name="Computer5" parent="CPU/Tutorial room 1" instance=ExtResource("2_4vsui")]
position = Vector2(5382, 629)
rotation = 1.04718
isAI = true
canRespawn = false
isCampaign = true
playerIndex = 6
canShoot_Move = false

[node name="Tutorial room 2" type="Node" parent="CPU"]

[node name="Computer1" parent="CPU/Tutorial room 2" instance=ExtResource("2_4vsui")]
position = Vector2(6857, 1380)
rotation = -0.523598
isAI = true
canRespawn = false
isCampaign = true
playerIndex = 5
canShoot_Move = false

[node name="Computer2" parent="CPU/Tutorial room 2" instance=ExtResource("2_4vsui")]
position = Vector2(6446, 654)
rotation = 2.35619
isAI = true
canRespawn = false
isCampaign = true
playerIndex = 5
canShoot_Move = false

[node name="Computer3" parent="CPU/Tutorial room 2" instance=ExtResource("2_4vsui")]
position = Vector2(8109, 1383)
rotation = 2.35619
isAI = true
canRespawn = false
isCampaign = true
playerIndex = 5
canShoot_Move = false

[node name="Computer4" parent="CPU/Tutorial room 2" instance=ExtResource("2_4vsui")]
position = Vector2(8484, 927)
rotation = 2.35619
isAI = true
canRespawn = false
isCampaign = true
playerIndex = 5
canShoot_Move = false

[node name="Npcs" type="Node" parent="."]

[node name="start" type="Node" parent="Npcs"]

[node name="Von" parent="Npcs/start" instance=ExtResource("5_gf1e8")]
position = Vector2(-817, 777)
interactable = true

[node name="Ric01" parent="Npcs/start" instance=ExtResource("7_uwcl3")]
position = Vector2(767, 1353)

[node name="Area Preview" type="Node" parent="."]

[node name="checkpoints" type="Node" parent="Area Preview"]

[node name="Tutorial" type="Node2D" parent="Area Preview/checkpoints"]
position = Vector2(4468, 1230)

[node name="TutorialIn" type="Area2D" parent="Area Preview/checkpoints/Tutorial"]
position = Vector2(-1490, -614)
collision_layer = 0
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area Preview/checkpoints/Tutorial/TutorialIn"]
position = Vector2(408, 23)
shape = SubResource("ConvexPolygonShape2D_1ypf1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area Preview/checkpoints/Tutorial/TutorialIn"]
position = Vector2(2536, 1205)
shape = SubResource("RectangleShape2D_sl1sa")

[node name="TutorialOut" type="Area2D" parent="Area Preview/checkpoints/Tutorial"]
position = Vector2(1146, 558)
collision_layer = 0
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area Preview/checkpoints/Tutorial/TutorialOut"]
position = Vector2(1, 32)
shape = SubResource("RectangleShape2D_rcbqr")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area Preview/checkpoints/Tutorial/TutorialOut"]
position = Vector2(-2404, -1178.75)
shape = SubResource("RectangleShape2D_rcbqr")

[node name="Camera2D" type="Camera2D" parent="Area Preview/checkpoints/Tutorial"]
enabled = false
zoom = Vector2(0.9, 0.9)

[node name="spawn" type="Node2D" parent="Area Preview/checkpoints/Tutorial"]
position = Vector2(-914, -462)

[node name="CP_preview1" type="Node2D" parent="Area Preview/checkpoints/Tutorial"]
position = Vector2(-940, -546)

[node name="Camera2D" type="Camera2D" parent="Area Preview/checkpoints/Tutorial/CP_preview1"]
enabled = false
zoom = Vector2(3, 3)

[node name="CP_preview2" type="Node2D" parent="Area Preview/checkpoints/Tutorial"]
position = Vector2(343, 134)

[node name="Camera2D" type="Camera2D" parent="Area Preview/checkpoints/Tutorial/CP_preview2"]
enabled = false
zoom = Vector2(3, 3)

[node name="Tutorial2" type="Node2D" parent="Area Preview/checkpoints"]
position = Vector2(7491, 1222)

[node name="spawn" type="Node2D" parent="Area Preview/checkpoints/Tutorial2"]
position = Vector2(-13, 486)

[node name="room" type="Camera2D" parent="Area Preview/checkpoints/Tutorial2"]
position = Vector2(139, -52)
enabled = false
zoom = Vector2(0.85, 0.85)

[node name="CP_preview1" type="Camera2D" parent="Area Preview/checkpoints/Tutorial2"]
position = Vector2(-921, 577)
enabled = false
zoom = Vector2(3, 3)

[node name="CP_preview2" type="Camera2D" parent="Area Preview/checkpoints/Tutorial2"]
position = Vector2(-765, 201)
enabled = false
zoom = Vector2(2.5, 2.5)

[node name="Tutorial2In" type="Area2D" parent="Area Preview/checkpoints/Tutorial2"]
position = Vector2(-1202, 598)
collision_layer = 0
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area Preview/checkpoints/Tutorial2/Tutorial2In"]
shape = SubResource("RectangleShape2D_ywr3k")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area Preview/checkpoints/Tutorial2/Tutorial2In"]
position = Vector2(1199, -1323)
shape = SubResource("RectangleShape2D_08ot8")

[node name="Tutorial2Out" type="Area2D" parent="Area Preview/checkpoints/Tutorial2"]
position = Vector2(-1308, 598)
collision_layer = 0
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area Preview/checkpoints/Tutorial2/Tutorial2Out"]
shape = SubResource("RectangleShape2D_lfvdy")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area Preview/checkpoints/Tutorial2/Tutorial2Out"]
position = Vector2(1306, -1424)
shape = SubResource("RectangleShape2D_6d4tb")

[node name="End" type="Node2D" parent="Area Preview/checkpoints"]
position = Vector2(7501, -191)

[node name="Detect" type="Area2D" parent="Area Preview/checkpoints/End"]
collision_layer = 0
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area Preview/checkpoints/End/Detect"]
position = Vector2(-15, 38)
shape = SubResource("RectangleShape2D_oxkum")

[node name="end" type="Camera2D" parent="Area Preview/checkpoints/End"]
zoom = Vector2(3, 3)

[node name="mainTileMapSet" parent="." instance=ExtResource("3_thje5")]

[node name="Layer 2 (floor)" parent="mainTileMapSet" index="0"]
tile_map_data = PackedByteArray("AAAVAAkAAAAGAAEAAAARAAsAAAAGAAEAAAAQAA8AAAAGAAEAAAAMAA8AAAAGAAEAAAALABQAAAAGAAEAAAALABcAAAAGAAEAAAAIABkAAAAGAAEAAAADABcAAAAGAAEAAAD9/xYAAAAGAAEAAAD7/xgAAAAGAAEAAAD2/xcAAAAGAAEAAAD2/xMAAAAGAAEAAAD1/w4AAAAGAAEAAAD3/w0AAAAGAAEAAAD6/woAAAAGAAEAAAD1/wcAAAAGAAEAAAA=")

[node name="Layer 1 (walls)" parent="mainTileMapSet" index="1"]
tile_map_data = PackedByteArray("AAAUAAsAAAAEAAAAAAAUAAoAAAADAAIAAAAUAAwAAAAEAAAAAAAUAA4AAAADAAMAAAAVAA4AAAADAAMAAAAVAA0AAAADAAIAAAAWAA4AAAADAAMAAAAWAA0AAAADAAIAAAAXAA4AAAADAAMAAAAXAA0AAAADAAIAAAAYAA4AAAADAAMAAAAYAA0AAAADAAIAAAAZAAsAAAAEAAAAAAAZAAoAAAAEAAAAAAAZAAwAAAAEAAAAAAAZAA0AAAAEAAAAAAAZAA4AAAADAAMAAAAUAA0AAAAEAAAAAAATABwAAAADAAMAAAATABsAAAAEAAAAAAATABoAAAAEAAAAAAATABkAAAAEAAAAAAATABgAAAAEAAAAAAATABcAAAAEAAAAAAATABYAAAAEAAAAAAATABUAAAAEAAAAAAATABQAAAAEAAAAAAATABMAAAAEAAAAAAATABIAAAAEAAAAAAATABEAAAAEAAAAAAATABAAAAAEAAAAAAATAA8AAAAEAAAAAAATAA4AAAADAAIAAAASABwAAAADAAMAAAASABsAAAADAAIAAAARABwAAAADAAMAAAARABsAAAADAAIAAAAQABwAAAADAAMAAAAQABsAAAADAAIAAAAPABwAAAADAAMAAAAPABsAAAADAAIAAAAOABwAAAADAAMAAAAOABsAAAADAAIAAAAMABwAAAADAAMAAAANABwAAAADAAMAAAANABsAAAADAAIAAAAMABsAAAADAAIAAAALABwAAAADAAMAAAALABsAAAADAAIAAAAKABwAAAADAAMAAAAKABsAAAADAAIAAAAJABwAAAADAAMAAAAJABsAAAADAAIAAAAIABwAAAADAAMAAAAIABsAAAADAAIAAAAHABwAAAADAAMAAAAHABsAAAADAAIAAAAGABwAAAADAAMAAAAGABsAAAADAAIAAAAFABwAAAADAAMAAAAFABsAAAADAAIAAAAEABwAAAADAAMAAAAEABsAAAADAAIAAAADABwAAAADAAMAAAADABsAAAADAAIAAAACABwAAAADAAMAAAACABsAAAADAAIAAAABABwAAAADAAMAAAABABsAAAADAAIAAAAAABwAAAADAAMAAAAAABsAAAADAAIAAAD//xwAAAADAAMAAAD//xsAAAADAAIAAAD+/xwAAAADAAMAAAD+/xsAAAADAAIAAAD9/xwAAAADAAMAAAD9/xsAAAADAAIAAAD8/xwAAAADAAMAAAD8/xsAAAADAAIAAAD7/xwAAAADAAMAAAD7/xsAAAADAAIAAAD6/xwAAAADAAMAAAD6/xsAAAADAAIAAAD5/xwAAAADAAMAAAD5/xsAAAADAAIAAAD4/xwAAAADAAMAAAD4/xsAAAADAAIAAAD3/xwAAAADAAMAAAD3/xsAAAADAAIAAAD2/xwAAAADAAMAAAD2/xsAAAADAAIAAAD1/xwAAAADAAMAAAD1/xsAAAADAAIAAAD0/xwAAAADAAMAAAD0/xsAAAADAAIAAADz/xwAAAADAAMAAADz/xsAAAADAAIAAADy/xsAAAAEAAAAAADy/xwAAAADAAMAAADy/xoAAAAEAAAAAADy/xkAAAAEAAAAAADy/xgAAAAEAAAAAADy/xcAAAAEAAAAAADy/xYAAAAEAAAAAADy/xUAAAAEAAAAAADy/xQAAAAEAAAAAADy/xMAAAAEAAAAAADy/xIAAAAEAAAAAADy/xEAAAAEAAAAAADy/xAAAAAEAAAAAADy/w8AAAAEAAAAAADy/w4AAAAEAAAAAADy/w0AAAAEAAAAAADy/wwAAAAEAAAAAADy/wsAAAAEAAAAAADy/woAAAAEAAAAAADy/wkAAAAEAAAAAADy/wgAAAAEAAAAAADy/wcAAAAEAAAAAADy/wYAAAAEAAAAAADy/wUAAAAEAAAAAADy/wQAAAAEAAAAAADy/wMAAAADAAIAAADz/wQAAAADAAMAAADz/wMAAAADAAIAAAD0/wQAAAADAAMAAAD0/wMAAAADAAIAAAD1/wQAAAADAAMAAAD1/wMAAAADAAIAAAD2/wQAAAADAAMAAAD2/wMAAAADAAIAAAD3/wQAAAADAAMAAAD3/wMAAAADAAIAAAD4/wQAAAADAAMAAAD4/wMAAAADAAIAAAD5/wQAAAADAAMAAAD5/wMAAAADAAIAAAD6/wQAAAADAAMAAAD6/wMAAAADAAIAAAD7/wQAAAADAAMAAAD7/wMAAAADAAIAAAD8/wQAAAADAAMAAAD8/wMAAAADAAIAAAD9/wQAAAADAAMAAAD9/wMAAAADAAIAAAAKAAsAAAAEAAAAAAAKAAwAAAAEAAAAAAAKAAoAAAADAAIAAAAKAA0AAAAEAAAAAAAKAA4AAAAEAAAAAAAKAA8AAAAEAAAAAAAKABAAAAAEAAAAAAAKABEAAAAEAAAAAAAKABIAAAAEAAAAAAAKABMAAAAEAAAAAAAKABQAAAAEAAAAAAAKABUAAAADAAMAAAAJABUAAAADAAMAAAAJABQAAAADAAIAAAAIABUAAAADAAMAAAAIABQAAAADAAIAAAAHABUAAAADAAMAAAAHABQAAAADAAIAAAAGABUAAAADAAMAAAAGABQAAAADAAIAAAAEABUAAAADAAMAAAAEABQAAAADAAIAAAADABUAAAADAAMAAAADABQAAAADAAIAAAACABUAAAADAAMAAAACABQAAAADAAIAAAABABUAAAADAAMAAAABABQAAAADAAIAAAAAABUAAAADAAMAAAAAABQAAAAEAAAAAAD//xUAAAADAAMAAAD//xQAAAADAAIAAAD+/xUAAAADAAMAAAD+/xQAAAADAAIAAAD9/xUAAAADAAMAAAD9/xQAAAADAAIAAAD8/xUAAAADAAMAAAD8/xQAAAAEAAAAAAAFAA8AAAAEAAAAAAAFAA4AAAAEAAAAAAAFAA0AAAAEAAAAAAAFAAwAAAAEAAAAAAAFAAsAAAAEAAAAAAAFAAoAAAADAAIAAAAGAAsAAAADAAMAAAAGAAoAAAAEAAAAAAAHAAsAAAADAAMAAAAHAAoAAAADAAIAAAAJAAsAAAADAAMAAAAJAAoAAAADAAIAAAAFABUAAAADAAMAAAAFABQAAAADAAIAAAAFABAAAAAEAAAAAAAFABEAAAADAAMAAAAAABMAAAAEAAAAAAAAABIAAAAEAAAAAAAAABEAAAAEAAAAAAAAABAAAAAEAAAAAAAAAA8AAAAEAAAAAAAAAA4AAAAEAAAAAAAAAA0AAAAEAAAAAAAAAAwAAAAEAAAAAAAAAAsAAAAEAAAAAAAAAAoAAAADAAIAAAD8/xMAAAAEAAAAAAD8/xIAAAAEAAAAAAD8/xEAAAAEAAAAAAD8/xAAAAAEAAAAAAD8/w8AAAAEAAAAAAD8/w4AAAAEAAAAAAD8/w0AAAAEAAAAAAD8/wwAAAAEAAAAAAD8/wsAAAAEAAAAAAD8/woAAAADAAIAAAD9/wsAAAADAAMAAAD9/woAAAADAAIAAAD+/wsAAAADAAMAAAD+/woAAAADAAIAAAD//wsAAAADAAMAAAD//woAAAADAAIAAAD+/wQAAAADAAMAAAD+/wMAAAADAAIAAAD//wQAAAADAAMAAAD//wMAAAADAAIAAAAAAAQAAAADAAMAAAAAAAMAAAADAAIAAAABAAQAAAADAAMAAAABAAMAAAADAAIAAAACAAQAAAADAAMAAAACAAMAAAADAAIAAAADAAQAAAADAAMAAAADAAMAAAADAAIAAAAEAAQAAAADAAMAAAAEAAMAAAADAAIAAAAFAAQAAAADAAMAAAAFAAMAAAADAAIAAAAGAAQAAAADAAMAAAAGAAMAAAADAAIAAAAHAAQAAAADAAMAAAAHAAMAAAADAAIAAAAIAAQAAAADAAMAAAAIAAMAAAADAAIAAAAJAAQAAAADAAMAAAAJAAMAAAADAAIAAAAKAAQAAAADAAMAAAAKAAMAAAADAAIAAAALAAQAAAADAAMAAAALAAMAAAADAAIAAAAMAAQAAAADAAMAAAAMAAMAAAADAAIAAAANAAQAAAADAAMAAAANAAMAAAADAAIAAAAOAAQAAAADAAMAAAAOAAMAAAADAAIAAAAPAAQAAAADAAMAAAAPAAMAAAADAAIAAAAQAAQAAAADAAMAAAAQAAMAAAADAAIAAAARAAQAAAADAAMAAAARAAMAAAADAAIAAAASAAQAAAADAAMAAAASAAMAAAADAAIAAAATAAQAAAADAAMAAAATAAMAAAADAAIAAAAUAAQAAAADAAMAAAAUAAMAAAADAAIAAAAVAAQAAAADAAMAAAAVAAMAAAADAAIAAAAWAAQAAAADAAMAAAAWAAMAAAADAAIAAAAXAAQAAAADAAMAAAAXAAMAAAADAAIAAAAYAAQAAAADAAMAAAAYAAMAAAADAAIAAAAZAAQAAAADAAMAAAAZAAMAAAADAAIAAAAaAAQAAAADAAMAAAAaAAMAAAADAAIAAAAbAAQAAAADAAMAAAAbAAMAAAADAAIAAAAcAAQAAAADAAMAAAAcAAMAAAADAAIAAAAdAAQAAAADAAMAAAAdAAMAAAADAAIAAAAeAAQAAAADAAMAAAAeAAMAAAADAAIAAAAfAAQAAAADAAMAAAAfAAMAAAADAAIAAAAZAAgAAAAEAAAAAAAZAAkAAAAEAAAAAAAZAAcAAAADAAIAAAAgAAgAAAAEAAAAAAAfAAgAAAADAAMAAAAeAAgAAAADAAMAAAAdAAgAAAADAAMAAAAcAAgAAAADAAMAAAAbAAgAAAADAAMAAAAaAAgAAAADAAMAAAAaAAcAAAADAAIAAAAbAAcAAAADAAIAAAAcAAcAAAADAAIAAAAdAAcAAAADAAIAAAAeAAcAAAADAAIAAAAfAAcAAAADAAIAAAAgAAcAAAADAAIAAAAgAAQAAAADAAMAAAAgAAMAAAADAAIAAAAgAAkAAAAEAAAAAAAgAA8AAAAEAAAAAAAgAA4AAAAEAAAAAAAgAA0AAAAEAAAAAAAgAAwAAAAEAAAAAAAgAAsAAAAEAAAAAAAgAAoAAAAEAAAAAAAgABAAAAAEAAAAAAAgABEAAAAEAAAAAAAhAAQAAAADAAMAAAAhAAMAAAADAAIAAAAiAAQAAAADAAMAAAAiAAMAAAADAAIAAAAjAAQAAAADAAMAAAAjAAMAAAADAAIAAAAkAAQAAAADAAMAAAAkAAMAAAADAAIAAAAlAAQAAAADAAMAAAAlAAMAAAADAAIAAAAmAAQAAAADAAMAAAAmAAMAAAADAAIAAAAnAAQAAAADAAMAAAAnAAMAAAADAAIAAAAoAAQAAAADAAMAAAAoAAMAAAADAAIAAAApAAQAAAAEAAAAAAApAAMAAAADAAIAAAAqAAQAAAADAAMAAAAqAAMAAAADAAIAAAArAAQAAAADAAMAAAArAAMAAAADAAIAAAAsAAQAAAADAAMAAAAsAAMAAAADAAIAAAAtAAQAAAADAAMAAAAtAAMAAAADAAIAAAAuAAQAAAADAAMAAAAuAAMAAAADAAIAAAAvAAQAAAADAAMAAAAvAAMAAAADAAIAAAAwAAQAAAADAAMAAAAwAAMAAAADAAIAAAAxAAQAAAADAAMAAAAxAAMAAAADAAIAAAAyAAQAAAADAAMAAAAyAAMAAAADAAIAAAAzAAQAAAADAAMAAAAzAAMAAAADAAIAAAAhABUAAAADAAMAAAAhABQAAAADAAIAAAAiABUAAAADAAMAAAAiABQAAAADAAIAAAAjABUAAAADAAMAAAAjABQAAAADAAIAAAAkABUAAAADAAMAAAAkABQAAAADAAIAAAAlABUAAAADAAMAAAAlABQAAAADAAIAAAAmABUAAAADAAMAAAAmABQAAAADAAIAAAAnABUAAAADAAMAAAAnABQAAAADAAIAAAAoABUAAAADAAMAAAAoABQAAAADAAIAAAApABUAAAADAAMAAAApABQAAAADAAIAAAAqABUAAAADAAMAAAAqABQAAAADAAIAAAArABUAAAADAAMAAAArABQAAAADAAIAAAAsABUAAAADAAMAAAAsABQAAAADAAIAAAAtABUAAAADAAMAAAAtABQAAAADAAIAAAAuABUAAAADAAMAAAAuABQAAAADAAIAAAAvABUAAAADAAMAAAAvABQAAAADAAIAAAAwABUAAAADAAMAAAAwABQAAAADAAIAAAAxABUAAAADAAMAAAAxABQAAAADAAIAAAAyABUAAAADAAMAAAAyABQAAAADAAIAAAAzABUAAAADAAMAAAAzABQAAAADAAIAAAA0ABUAAAADAAMAAAA0ABQAAAADAAIAAAA1ABUAAAADAAMAAAA1ABQAAAADAAIAAAA2ABUAAAADAAMAAAA2ABQAAAADAAIAAAA3ABUAAAADAAMAAAA3ABQAAAADAAIAAAA4ABUAAAADAAMAAAA4ABQAAAADAAIAAAA5ABUAAAADAAMAAAA5ABQAAAADAAIAAAA7ABUAAAADAAMAAAA7ABQAAAADAAIAAAA8ABUAAAADAAMAAAA8ABQAAAADAAIAAAA9ABUAAAADAAMAAAA9ABQAAAADAAIAAAA+ABUAAAADAAMAAAA+ABQAAAADAAIAAAA/ABUAAAADAAMAAAA/ABQAAAADAAIAAABAABUAAAADAAMAAABAABQAAAADAAIAAABBABUAAAADAAMAAABBABQAAAADAAIAAAAgABQAAAAEAAAAAAAgABUAAAADAAMAAAAgABMAAAAEAAAAAAAgABIAAAAEAAAAAAAhABEAAAADAAMAAAAhABAAAAADAAIAAAAiABEAAAADAAMAAAAiABAAAAADAAIAAAAjABEAAAADAAMAAAAjABAAAAADAAIAAAAkABEAAAADAAMAAAAkABAAAAADAAIAAAAlABEAAAADAAMAAAAlABAAAAADAAIAAAAuAA8AAAAEAAAAAAAuABAAAAADAAMAAAAuAA4AAAAEAAAAAAAuAA0AAAAEAAAAAAAuAAwAAAAEAAAAAAAuAAsAAAAEAAAAAAAuAAoAAAADAAIAAAAvAA4AAAADAAMAAAAvAA0AAAADAAIAAAAwAA4AAAADAAMAAAAwAA0AAAADAAIAAAAxAA4AAAADAAMAAAAxAA0AAAADAAIAAAAyAA4AAAADAAMAAAAyAA0AAAADAAIAAAAzAA4AAAADAAMAAAAzAA0AAAADAAIAAAApAAwAAAADAAMAAAApAAsAAAADAAIAAAAoAAwAAAADAAMAAAAoAAsAAAADAAIAAAAnAAwAAAADAAMAAAAnAAsAAAADAAIAAAAmAAwAAAADAAMAAAAmAAsAAAADAAIAAAAlAAwAAAADAAMAAAAlAAsAAAADAAIAAAApAAUAAAAEAAAAAAApAAYAAAAEAAAAAAApAAcAAAAEAAAAAAApAAgAAAADAAMAAAAIAAoAAAADAAIAAAAIAAsAAAADAAMAAAAGAAkAAAAEAAAAAAAGAAgAAAAEAAAAAAAGAAcAAAAEAAAAAAAGAAYAAAAEAAAAAAAGAAUAAAAEAAAAAAAxAAcAAAADAAIAAAAxAAgAAAADAAMAAAAqABAAAAADAAIAAAAqABEAAAADAAMAAAA3AA0AAAADAAMAAAA3AAwAAAADAAIAAAAzABIAAAADAAMAAAAzABEAAAADAAIAAAA6AA8AAAAEAAAAAAA6AA4AAAAEAAAAAAA6AA0AAAAEAAAAAAA6AAwAAAAEAAAAAAA6AAsAAAAEAAAAAAA6AAoAAAAEAAAAAAA6AAkAAAAEAAAAAAA6AAgAAAAEAAAAAAA6AAcAAAAEAAAAAAA6AAYAAAAEAAAAAAA6AAUAAAAEAAAAAAA6AAQAAAAEAAAAAAA6AAMAAAADAAIAAAA0AAQAAAADAAMAAAA0AAMAAAADAAIAAAA1AAQAAAADAAMAAAA1AAMAAAADAAIAAAA2AAQAAAADAAMAAAA2AAMAAAADAAIAAAA3AAQAAAADAAMAAAA3AAMAAAADAAIAAAA4AAQAAAADAAMAAAA4AAMAAAADAAIAAAA5AAQAAAADAAMAAAA5AAMAAAADAAIAAAA7ABAAAAADAAMAAAA7AA8AAAADAAIAAAA8ABAAAAADAAMAAAA8AA8AAAADAAIAAAA6ABAAAAADAAMAAAA6ABUAAAADAAMAAAA6ABQAAAADAAIAAAA9ABAAAAADAAMAAAA9AA8AAAADAAIAAAA+ABAAAAADAAMAAAA+AA8AAAADAAIAAAA/ABAAAAADAAMAAAA/AA8AAAADAAIAAABAABAAAAADAAMAAABAAA8AAAADAAIAAABBABAAAAADAAMAAABBAA8AAAAEAAAAAAA2AAUAAAAEAAAAAAA2AAYAAAAEAAAAAAA2AAcAAAAEAAAAAAA2AAgAAAADAAMAAABCABUAAAADAAMAAABCABQAAAADAAIAAABDABUAAAADAAMAAABDABQAAAADAAIAAABEABUAAAADAAMAAABEABQAAAADAAIAAABFABUAAAADAAMAAABFABQAAAADAAIAAABGABUAAAADAAMAAABGABQAAAADAAIAAABHABUAAAADAAMAAABHABQAAAADAAIAAABIABUAAAADAAMAAABIABQAAAADAAIAAABJABUAAAADAAMAAABJABQAAAADAAIAAABKABUAAAADAAMAAABKABQAAAADAAIAAABLABUAAAADAAMAAABLABQAAAADAAIAAABMABUAAAADAAMAAABMABQAAAADAAIAAABNABUAAAADAAMAAABNABQAAAADAAIAAABBAA4AAAAEAAAAAABBAA0AAAAEAAAAAABBAAwAAAADAAMAAABBAAsAAAAEAAAAAABBAAoAAAADAAMAAABBAAkAAAAEAAAAAABBAAgAAAAEAAAAAABBAAcAAAADAAMAAABBAAYAAAAEAAAAAABGABAAAAADAAMAAABGAA8AAAADAAIAAABHABAAAAADAAMAAABHAA8AAAADAAIAAABIABAAAAADAAMAAABIAA8AAAADAAIAAABJAA8AAAAEAAAAAABJABAAAAADAAMAAABJAA4AAAAEAAAAAABJAA0AAAAEAAAAAABJAAwAAAADAAMAAABJAAsAAAAEAAAAAABJAAoAAAADAAMAAABIAAoAAAADAAMAAABIAAkAAAADAAIAAABHAAoAAAADAAMAAABHAAkAAAADAAIAAABGAAoAAAADAAMAAABGAAkAAAADAAIAAABFAAoAAAADAAMAAABFAAkAAAADAAIAAABEAAoAAAADAAMAAABEAAkAAAADAAIAAABDAAoAAAADAAMAAABDAAkAAAADAAIAAABCAAoAAAADAAMAAABCAAkAAAADAAIAAABFABAAAAADAAMAAABFAA8AAAAEAAAAAABFAA4AAAAEAAAAAABFAA0AAAAEAAAAAABFAAwAAAADAAIAAABCABAAAAADAAAAAABDABAAAAADAAAAAABEABAAAAADAAAAAABEAAcAAAADAAMAAABEAAYAAAAEAAAAAABBAAUAAAAEAAAAAABBAAQAAAADAAMAAABEAAUAAAAEAAAAAABEAAQAAAADAAMAAABFAAUAAAAEAAAAAABFAAQAAAADAAMAAABGAAUAAAAEAAAAAABGAAQAAAADAAMAAABHAAUAAAAEAAAAAABHAAQAAAADAAMAAABIAAUAAAAEAAAAAABIAAQAAAADAAMAAABJAAUAAAAEAAAAAABJAAQAAAADAAMAAABFAAcAAAADAAMAAABFAAYAAAAEAAAAAABGAAcAAAADAAMAAABGAAYAAAAEAAAAAABHAAcAAAADAAMAAABHAAYAAAAEAAAAAABIAAcAAAADAAMAAABIAAYAAAAEAAAAAABJAAcAAAADAAMAAABJAAYAAAAEAAAAAABJAAkAAAADAAAAAGBJAAgAAAADAAAAAGBOABUAAAADAAMAAABOABQAAAADAAIAAABPABUAAAADAAMAAABPABQAAAADAAIAAABQABUAAAADAAMAAABQABQAAAADAAIAAABRABUAAAADAAMAAABRABQAAAADAAIAAABSABUAAAADAAMAAABSABQAAAADAAIAAABTABUAAAADAAMAAABTABQAAAADAAIAAABUABUAAAADAAMAAABUABQAAAADAAIAAABVABUAAAADAAMAAABVABQAAAADAAIAAABWABUAAAADAAMAAABWABQAAAADAAIAAABXABUAAAADAAMAAABXABQAAAADAAIAAABYABUAAAADAAMAAABYABQAAAADAAIAAABZABUAAAADAAMAAABZABQAAAADAAIAAABaABUAAAADAAMAAABaABQAAAADAAIAAABbABUAAAADAAMAAABbABQAAAADAAIAAABcABUAAAADAAMAAABcABQAAAADAAIAAABdABUAAAADAAMAAABdABQAAAADAAIAAABeABUAAAADAAMAAABeABQAAAAEAAAAAABeABMAAAAEAAAAAABeABIAAAAEAAAAAABeABEAAAAEAAAAAABeABAAAAAEAAAAAABeAA8AAAAEAAAAAABeAA4AAAAEAAAAAABeAA0AAAAEAAAAAABeAAwAAAAEAAAAAABeAAsAAAAEAAAAAABeAAoAAAADAAMAAABeAAkAAAAEAAAAAABeAAgAAAAEAAAAAABeAAcAAAADAAMAAABeAAYAAAAEAAAAAABeAAUAAAAEAAAAAABeAAQAAAAEAAAAAABeAAMAAAADAAIAAABdAAQAAAADAAMAAABdAAMAAAADAAIAAABcAAQAAAADAAMAAABcAAMAAAADAAIAAABbAAQAAAADAAMAAABbAAMAAAADAAIAAABaAAQAAAADAAMAAABaAAMAAAADAAIAAABZAAQAAAADAAMAAABZAAMAAAADAAIAAABYAAQAAAADAAMAAABYAAMAAAADAAIAAABXAAQAAAADAAMAAABXAAMAAAADAAIAAABWAAQAAAADAAMAAABWAAMAAAADAAIAAABVAAQAAAADAAMAAABVAAMAAAADAAIAAABUAAQAAAADAAMAAABUAAMAAAADAAIAAABTAAQAAAADAAMAAABTAAMAAAADAAIAAABSAAQAAAADAAMAAABSAAMAAAADAAIAAABRAAQAAAADAAMAAABRAAMAAAADAAIAAABQAAQAAAADAAMAAABQAAMAAAAEAAAAAABLAAQAAAADAAMAAABLAAMAAAAEAAAAAABKAAQAAAADAAMAAABKAAMAAAADAAIAAABJAAMAAAADAAIAAABIAAMAAAADAAIAAABHAAMAAAADAAIAAABGAAMAAAADAAIAAABFAAMAAAADAAIAAABBAAMAAAADAAIAAABEAAMAAAADAAIAAABZABAAAAADAAMAAABZAA8AAAADAAIAAABYABAAAAADAAMAAABYAA8AAAADAAIAAABXABAAAAADAAMAAABXAA8AAAADAAIAAABWABAAAAADAAMAAABWAA8AAAADAAIAAABVABAAAAADAAMAAABVAA8AAAADAAIAAABUABAAAAADAAMAAABUAA8AAAADAAIAAABTABAAAAADAAMAAABTAA8AAAADAAIAAABSABAAAAADAAMAAABSAA8AAAAEAAAAAABSAA4AAAAEAAAAAABSAA0AAAAEAAAAAABSAAwAAAADAAMAAABSAAsAAAAEAAAAAABTAAwAAAADAAMAAABTAAsAAAADAAIAAABUAAwAAAADAAMAAABUAAsAAAADAAIAAABVAAwAAAADAAMAAABVAAsAAAADAAIAAABWAAwAAAADAAMAAABWAAsAAAADAAIAAABXAAwAAAADAAMAAABXAAsAAAADAAIAAABYAAwAAAADAAMAAABYAAsAAAADAAIAAABZAAwAAAADAAMAAABZAAsAAAADAAIAAABaAAwAAAADAAMAAABaAAsAAAADAAIAAABbAAwAAAADAAMAAABbAAsAAAADAAIAAABcAAwAAAADAAMAAABcAAsAAAADAAIAAABdAAwAAAADAAMAAABdAAsAAAADAAIAAABDAAUAAAADAAMAAABCAAUAAAADAAMAAABCAAQAAAADAAMAAABDAAQAAAADAAMAAABCAAMAAAADAAIAAABDAAMAAAADAAIAAABaABAAAAADAAAAAABbABAAAAADAAAAAABcABAAAAADAAAAAABdABAAAAADAAAAAABdAAcAAAADAAAAAABcAAcAAAADAAAAAABbAAcAAAADAAAAAABaAAcAAAADAAAAAABZAAcAAAADAAMAAABZAAYAAAADAAIAAABYAAcAAAADAAMAAABYAAYAAAADAAIAAABXAAcAAAADAAMAAABXAAYAAAADAAIAAABWAAcAAAADAAMAAABWAAYAAAADAAIAAABVAAcAAAADAAMAAABVAAYAAAADAAIAAABUAAcAAAADAAMAAABUAAYAAAADAAIAAABTAAcAAAADAAMAAABTAAYAAAADAAIAAABSAAcAAAADAAMAAABSAAYAAAADAAAAAFBSAAgAAAAEAAAAAABSAAkAAAAEAAAAAABSAAoAAAADAAMAAABLAAIAAAAEAAAAAABLAAEAAAAEAAAAAABLAAAAAAAEAAAAAABLAP//AAAEAAAAAABQAAIAAAAEAAAAAABQAAEAAAAEAAAAAABQAAAAAAAEAAAAAABQAP//AAAEAAAAAABQAP7/AAAEAAAAAABQAP3/AAAEAAAAAABQAPz/AAAEAAAAAABQAPv/AAAEAAAAAABLAP7/AAAEAAAAAABLAP3/AAAEAAAAAABLAPz/AAAEAAAAAABLAPv/AAAEAAAAAABSAAUAAAADAAAAAFBKAPv/AAADAAMAAABKAPr/AAADAAIAAABJAPv/AAADAAMAAABJAPr/AAADAAIAAABIAPv/AAADAAMAAABIAPr/AAADAAIAAABHAPv/AAADAAMAAABHAPr/AAADAAIAAABLAPr/AAADAAIAAABQAPr/AAADAAIAAABGAPr/AAAEAAAAAABGAPv/AAADAAMAAABGAPn/AAAEAAAAAABGAPj/AAAEAAAAAABGAPb/AAAEAAAAAABGAPf/AAAEAAAAAABGAPX/AAADAAIAAABHAPb/AAADAAMAAABHAPX/AAADAAIAAABIAPb/AAADAAMAAABIAPX/AAADAAIAAABJAPb/AAADAAMAAABJAPX/AAADAAIAAABKAPb/AAADAAMAAABKAPX/AAADAAIAAABLAPb/AAADAAMAAABLAPX/AAADAAIAAAA=")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Tutorial Text" type="Label" parent="UI"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -762.0
offset_top = 203.0
offset_right = -143.0
offset_bottom = 383.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("4_1mnk3")
theme_override_font_sizes/font_size = 80
text = "TO MOVE
press W,A,S,D to move and rotate
"

[node name="Panel" type="Panel" parent="UI/Tutorial Text"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Music" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="Area Preview/checkpoints/Tutorial/TutorialIn" to="." method="Checkpoint_Tutorial"]
[connection signal="body_entered" from="Area Preview/checkpoints/Tutorial/TutorialOut" to="." method="Checkpoint_TutorialOut"]
[connection signal="body_entered" from="Area Preview/checkpoints/Tutorial2/Tutorial2In" to="." method="Checkpoint_Tutorial2In"]
[connection signal="body_entered" from="Area Preview/checkpoints/Tutorial2/Tutorial2Out" to="." method="Checkpoint_Tutorial2Out"]
[connection signal="body_entered" from="Area Preview/checkpoints/End/Detect" to="." method="Checkpoint_End"]

[editable path="mainTileMapSet"]
